--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">Flasky</a>
+            <a class="navbar-brand" href="/">Avaliação contínua: <B>Aula 070</B></a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
